# TranscanEditor

./: .gitignore  main.py  requirements.txt
charaterRecognition/: CharacterDetector.py  CraftConfig.py
charaterRecognition/craft/: README.md  file_utils.py  requirements.txt
core/: .gitignore  api.py  cli.py  main.py  requirements.txt
core/src/: FileManager.py  ImageCleaner.py  OCRManager.py  TextEditor.py  TextManager.py  TranslatorManager.py  model.py
core/src/model/: apiModel.py  model.py
core/src/ocr/: IOpticalCharacterRecognition.py  OCRAmazonAWS.py  OCR_AWSRekognition.py  OCR_AWSTextract.py
core/src/ocr/default/: OCRCraftTesseract.py  TextExtractor.py
core/src/ocr/default/characterRecognition/: CharacterDetector.py
core/src/utility/: OCRResultCacheManager.py  check.py  collision.py  create_block_cluster.py  draw_bouncing_box.py  exception.py  extract_image_area.py  mymath.py  show_debug.py
doc/: gui.puml
gui/: .gitignore  FyneApp.toml  app.go  go.mod  main.go
gui/ComicTranslator/: CMakeLists.txt  asset.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewerwindow.cpp  viewerwindow.h
gui/ComicTranslator/include/: IEditorArea.h  ITextEditArea.h  environment.h  models.h
gui/ComicTranslator/include/model/: OCRPage.h  Utils.h
gui/ComicTranslator/page/editor/: EditorController.cpp  EditorController.h  EditorPage.cpp  EditorPage.h  EditorView.cpp  EditorView.h
gui/ComicTranslator/page/home/: HomePage.cpp  HomePage.h  homepage.cpp  homepage.h
gui/ComicTranslator/style/: Devsion.qss
gui/ComicTranslator/ui/: home_page.ui  mainwindow.ui
gui/ComicTranslator/widget/editor/: AEditArea.cpp  AEditArea.h  APropertyTab.cpp  APropertyTab.h
gui/ComicTranslator/widget/editor/editArea/: EditAreaRect.cpp  EditAreaRect.h  SelectAreaRect.cpp  SelectAreaRect.h
gui/ComicTranslator/widget/editor/editTab/: AEditArea.cpp  AEditArea.h  ATextEditArea.cpp  ATextEditArea.h  CleanEditArea.cpp  CleanEditArea.h  EditorEditArea.cpp  EditorEditArea.h  ExtractionEditArea.cpp  ExtractionEditArea.h  QPageViewer.cpp  QPageViewer.h  SaveEditArea.cpp  SaveEditArea.h
gui/ComicTranslator/widget/editor/pageEditor/: ExtractionEditArea.cpp  ExtractionEditArea.h
gui/ComicTranslator/widget/editor/property/: CleanPropertyTab.cpp  CleanPropertyTab.h  EditPropertyTab.h  ExtractionPropertyTab.h  SavePropertyTab.h
gui/ComicTranslator/widget/editor/propertyTab/: APropertyTab.cpp  APropertyTab.h  EditPropertyTab.cpp  ExtractionPropertyTab.cpp  SavePropertyTab.cpp  SavePropertyTab.h
gui/ComicTranslator/widget/imageViewer/: ImageViewer.cpp  ImageViewer.h  PageGraphicsView.cpp  PageGraphicsView.h
gui/ComicTranslator/window/: MainWindow.cpp  MainWindow.h  ViewerWindow.cpp  ViewerWindow.h  mainwindow.cpp  mainwindow.h  viewerwindow.cpp  viewerwindow.h
gui/Transcan/: Transcan.pro  asset.qrc  main.cpp  stylesheet.qss
gui/Transcan/include/: IEditTab.h  ServiceItem.h  env_config.h  env_messages.h  env_services.h  env_style.h  environment.h  models.h  resource_font.h
gui/Transcan/include/model/: OCRPage.h
gui/Transcan/model/: Page.cpp  Page.h  ServiceItem.h  configModels.h
gui/Transcan/net/: APIClient.cpp  APIClient.h  CoreRequest.cpp  CoreRequest.h
gui/Transcan/page/editor/: EditorController.cpp  EditorController.h  EditorView.cpp  EditorView.h
gui/Transcan/page/home/: HomePage.cpp  HomePage.h
gui/Transcan/ui/: home_page.ui
gui/Transcan/utility/: FileUtils.cpp  FileUtils.h  FontManager.cpp  FontManager.h
gui/Transcan/utils/: FileUtils.cpp  FileUtils.h
gui/Transcan/widget/editor/box/: SelectAreaBox.cpp  SelectAreaBox.h  TextEditBox.cpp  TextEditBox.h
gui/Transcan/widget/editor/editArea/: EditAreaRect.cpp  EditAreaRect.h  SelectAreaRect.cpp  SelectAreaRect.h
gui/Transcan/widget/editor/editTab/: ATextEditArea.cpp  ATextEditArea.h  ATextEditTab.cpp  ATextEditTab.h  CleanEditArea.cpp  CleanEditArea.h  CleanEditTab.cpp  CleanEditTab.h  EditorEditArea.cpp  EditorEditArea.h  EditorEditTab.cpp  EditorEditTab.h  ExtractionEditArea.cpp  ExtractionEditArea.h  (+9 more)
gui/Transcan/widget/imageViewer/: ImageViewer.cpp  ImageViewer.h  PageGraphicsView.cpp
gui/Transcan/widget/misc/: FontSelect.cpp  FontSelect.h  LoadingAnimation.cpp  LoadingAnimation.h  NetworkRetryDialog.cpp  NetworkRetryDialog.h  Notification.cpp  Notification.h  ZoomWidget.cpp  ZoomWidget.h
gui/Transcan/window/: MainWindow.cpp  MainWindow.h  ViewerWindow.cpp  ViewerWindow.h
gui/page/: Start.go  Viewer.go
scrapper/: scrapper.py
src/: ImageCleaner.py  TextEditor.py  TextExtractor.py  TranslatorManager.py  model.py  textErase.py  textExtractor.py
src/charaterRecognition/: CharacterDetector.py  CraftConfig.py  model.py  textExtractor.py
src/charaterRecognition/craft/: file_utils.py
src/ocr/: IOpticalCharacterRecognition.py  OCRAmazonAWS.py
src/ocr/default/: OCRCraftTesseract.py  TextExtractor.py
src/ocr/default/charaterRecognition/: CharacterDetector.py
src/textExtraction/: tesseract.py
src/utility/: FontManager.py  OCRResultCacheManager.py  TextManager.py  create_block_cluster.py  cyrillic_to_latin.py  draw_bouncing_box.py  extract_image_area.py  math.py  rotated_rect_crop.py  show_debug.py
(+18 files in other folders)
